--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gerenciador de turma</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="div1" id="gerenciador_container">
-        <label for="useradd">Adicionar aluno:</label>
-        <input type="text" id="useradd" place holder="Digite nome do aluno">
-        
-    </div>
+    <h1>Gerenciador de Turma</h1>
+    <button onclick="iniciar()">Iniciar Programa</button>
+    <pre id="saida"></pre>
     <script src="script.js"></script>
 </body>
 </html>
