--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de turma</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Gerenciador de Turma</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Gerenciador de Turma</h1>
-    <button onclick="iniciar()">Iniciar Programa</button>
-    <pre id="saida"></pre>
-    <script src="script.js"></script>
+  <h1>Gerenciador de Turma</h1>
+  <button onclick="iniciar()">Iniciar Programa</button>
+  <pre id="saida"></pre>
+
+  <script src="script.js"></script>
 </body>
 </html>
